Add slider, reset button, remove cell

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
         <title>Etch-a-Sketch</title>
     </head>
     <body>
+        <div class="settings">
+            <h2>Settings</h2>
+            <div class="grid-size-settings">
+                10<input id="grid-size-slider" type="range" min="10" max="64">64
+                <div id="grid-size-label"></div>
+            </div>
+            <button id="reset-button">Reset</button>
+        </div>
         <div class="grid-container"></div>
     </body>
 </html>
