Add rainbow color mode

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
                 10<input id="grid-size-slider" type="range" min="10" max="64">64
                 <div id="grid-size-label"></div>
             </div>
+            <div>
+                <div>Select your mode</div>
+                <input type="radio" id="singleColor" name="color_mode" value="SingleColor" checked>
+                <label for="singleColor">Single Color</label><br>
+                <input type="radio" id="rainbowColor" name="color_mode" value="RainbowColor">
+                <label for="rainbowColor">Rainbow Color</label>
+            </div>
             <button id="reset-button">Reset</button>
         </div>
         <div class="grid-container"></div>
