Add Clear button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 <input type="radio" id="rainbowColor" name="color_mode" value="RainbowColor">
                 <label for="rainbowColor">Rainbow Color</label>
             </div>
-            <button id="reset-button">Reset</button>            
+            <button id="clear-button">Clear</button>
+            <button id="reset-button">Reset</button>
         </div>
         <div>Press the middle mouse button to erase a cell</div>
         <div class="grid-container"></div>
