Fixe typo and change display

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div id="grid-size-label"></div>
             </div>
             <div>
-                <div>Select your mode</div>
+                <div class="select-mode-label">Select your mode</div>
                 <input type="radio" id="singleColor" name="color_mode" value="SingleColor" checked>
                 <label for="singleColor">Single Color</label><br>
                 <input type="radio" id="rainbowColor" name="color_mode" value="RainbowColor">
@@ -22,8 +22,8 @@
             </div>
             <button id="clear-button">Clear</button>
             <button id="reset-button">Reset</button>
-        </div>
-        <div>Press the middle mouse button to erase a cell</div>
+            <div>Press the middle mouse button to erase a cell</div>
+        </div>        
         <div class="grid-container"></div>
     </body>
 </html>
